[project]

name = "pjpipe"
version = "1.0.4"
description = "JWST Pipeline Wrapper for Nearby Galaxies"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}

authors = [
    {name = "Thomas G. Williams", email = "thomas.williams@physics.ox.ac.uk"},
]
maintainers = [
    {name = "Thomas G. Williams", email = "thomas.williams@physics.ox.ac.uk"},
]

classifiers = [
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 5 - Production/Stable",

  # License
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",

  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

dependencies = [
    "astropy>=6.0.0",
    "astroquery>=0.4.6",
    "cmocean>=3.1.3",
    "crds>=11.17.16",
    "gwcs>=0.20.0",
    "image-registration>=0.2.8",
    "jwst>=1.13.4",
    "lmfit>=1.2.2",
    "matplotlib>=3.8.2",
    "numpy>=1.26.4",
    "photutils>=1.10.0",
    "pypdf>=4.0.1",
    "pytest>=8.0.0",
    "reproject>=0.13.0",
    "requests>=2.31.0",
    "scikit-image>=0.22.0",
    "scipy>=1.12.0",
    "shapely>=2.0.2",
    "setuptools>=68.2.2",
    "stdatamodels>=1.9.1",
    "stwcs>=1.7.2",
    "threadpoolctl>=3.2.0",
    "tomli>=2.0.1",
    "tqdm>=4.66.1",
    "tweakwcs==0.8.5",
    "webbpsf>=1.2.1",
    "sphinx-automodapi>=0.16.0",
    "sphinx-rtd-theme>=2.0.0",
]

[project.urls]
"Homepage" = "http://phangs.org"
"Bug Reports" = "https://github.com/phangsTeam/pjpipe/issues"
"Source" = "https://github.com/phangsTeam/pjpipe"

[tool.setuptools.packages.find]
exclude = ["LEGACY/*"]

[build-system]
requires = ["setuptools>=43.0.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"
